# ZKanalyser

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  config.yaml  demo.md  zkanalyserprd.txt
config/: test.yaml
deployment/: deploy.sh  nginx.conf  pm2.config.js
docs/: API.md
scripts/: run_tests.sh
src/: alert_engine.rs  cli.rs  config.rs  ebpf_profiler.rs  error.rs  geyser_client.rs  integration_test.rs  lib.rs  main.rs  metrics.rs  plugin_manager.rs  replay_engine.rs  risk_engine.rs  security.rs  server.rs  solana_client.rs  storage.rs  tui_dashboard.rs  web_ui.rs
tests/: comprehensive_test.rs
