[package]
name = "zkanalyzer"
version = "3.5.0"
edition = "2021"
authors = ["ZKAnalyzer Team <achyutab@gmail.com>"]
description = "Solana Validator Observability, Security & Replay Suite"
license = "MIT"
repository = "https://github.com/MrDecryptDecipher/ZKanalyser"
keywords = ["solana", "validator", "monitoring", "blockchain", "security"]
categories = ["cryptography", "network-programming", "development-tools"]



[dependencies]
# Solana Core Dependencies
solana-sdk = "=1.18.26"
solana-client = "=1.18.26"
solana-geyser-plugin-interface = "=1.18.26"
solana-transaction-status = "=1.18.26"
solana-account-decoder = "=1.18.26"

# Async Runtime & Networking
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# HTTP Server & Web Framework
axum = { version = "0.7.5", features = ["ws", "multipart"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }

# Database & Storage
rusqlite = { version = "0.29", features = ["bundled", "chrono", "serde_json"] }

# Serialization & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Cryptography & Security
ed25519-dalek = { version = "=1.0.1", features = ["rand_core"] }
aes-gcm = "0.10"
ring = "0.17"
sha2 = "0.10"
hmac = "0.12"
jwt = "0.16"
rand = "0.8"

# Compression & Encoding
zstd = "0.13"
base64 = "0.21"
hex = "0.4"

# Metrics & Monitoring
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
log = "0.4"

# CLI & TUI
clap = { version = "4.4", features = ["derive", "env"] }
ratatui = "0.25"
crossterm = "0.27"

# eBPF (aya ecosystem)
aya = { version = "0.11", features = ["async_tokio"] }
aya-log = "0.1"

# Time & Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
lazy_static = "1.4"

# Networking & Communication
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"
futures-util = "0.3"

# System & OS Integration
sysinfo = "0.30"
nix = "0.27"
libc = "0.2"
libloading = "0.8"
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[[bin]]
name = "zkanalyzer"
path = "src/main.rs"

[[bin]]
name = "zkanalyzer-cli"
path = "src/cli.rs"


